# UScanner

./: .gitignore  Cargo.toml  README.md
scripts/: build.ps1
src/: completion.rs  diagnostics.rs  lib.rs  main.rs  refresh.rs  server_main.rs  types.rs  uasset.rs
src/db/: mod.rs  project_path.rs
src/edit/: mod.rs  target.rs  uproject.rs
src/parser/: cpp.rs
src/query/: asset.rs  buffer.rs  class.rs  config.rs  file.rs  goto.rs  mod.rs  module.rs  search.rs  usage.rs
src/server/: asset.rs  handlers.rs  mod.rs  state.rs  utils.rs  watcher.rs
ucore_test/: .gitignore  README.md  make-local.ps1  run-all-queries.ps1  run-lifecycle.ps1  run-query.ps1  start-server.ps1
ucore_test/templates/: query_get_all_file_paths.json  query_get_all_files_metadata.json  query_get_assets.json  query_get_completions.json  query_get_components.json  query_get_config_data.json  query_get_modules.json  query_get_structs_only.json  query_goto_definition.json  query_grep_assets_game.json  query_parse_buffer.json  query_search_classes_prefix_A.json  query_search_files_source.json  query_search_symbols_game.json  refresh.json  registry.json  setup.json  watch.json
