[package]
name = "u-scanner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "u_scanner"
path = "src/main.rs"

[[bin]]
name = "u_core_server"
path = "src/server_main.rs"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
hex = "0.4.3"
ignore = "0.4.25"
lru = "0.17.0"
memmap2 = "0.9.10"
notify = "8.2.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
streaming-iterator = "0.1.9"
sysinfo = "0.38.4"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.8"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-json = "0.24.8"
tree-sitter-unreal-cpp = { git = "https://github.com/vlicecream/UTreeSitter.git" }
